clients/atlas-tui/tests/snapshots/golden_book__the_book_view_renders_its_four_panes_at_120x36.snap
---
source: tests/golden_book.rs
expression: "book().frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 DESK │PORTFOLIO VALUE       UNREALIZED P&L WINDOW      SHARPE   0.27 GROSS  100.0% │▌ PULSE                          "
" 2 MKTS │$10,000.00            +$0.00         +0.00%      VOL     15.3% NET    100.0% │ desk stress  …                  "
"▌3 BOOK │2 pos · cash $0.00    +0.00% ▲0 ▼0   5 marks     MDD     -2.5% CVAR95  -2.3% │ regime CALM  robust UNCERTAIN   "
" 4 RSCH │─────────────────────────────────────────────────────────────────────────────│ drawdown 0.0%  tier NONE        "
" 5 WORK │▌ POSITIONS                                                            s sort│ gross 100.0%                    "
" 6 AUDIT│SYMBOL      QTY    LAST     AVG   WT%▾    MKTVAL       P&L    P&L%    TREND  │                                 "
" 7 SETT │▌BNDW     59.19   67.58   67.58  40.0%    $4.00K    +$0.00  +0.00%     ────  │▌ BREADTH                        "
"        │ ACWI      4.12  152.47  152.47   6.3%   $628.33    +$0.00  +0.00% ▅██▄▄▅▅▁  │ ███████████████████████████████ "
"        │                                                                             │ adv 1 / dec 4                   "
"        │                                                                             │                                 "
"        │                                                                             │▌ MOVERS                         "
"        │                                                                             │ ▲ best  XLF    +1.24%           "
"        │                                                                             │ ▼ worst XLK    -2.08%           "
"        │                                                                             │                                 "
"        │                                                                             │▌ REGIME                         "
"        │                                                                             │ … waiting for the regime panel  "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      STRESS               "
"        │▌ EQUITY                       p period  ALL 1Y 3M 1M ▌ HOLDINGS        h P&L│ agreement  ALIGNED              "
"        │$10,012.40         ⢀⠤⠊⢆                               BNDW  +0.0% ACWI  +0.0%│ conviction 84.0%                "
"        │                 ⡠⠔⠁  ⠈⢢                                                     │ news       alpaca               "
"        │$10,003.97    ⢀⡠⠊       ⠣⡀                                                   │─────────────────────────────────"
"        │            ⣀⠔⠁          ⠱⡀                                                  │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │           ⠊              ⠘⡄             ⡠⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒                        │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ $9,995.53                 ⠈⢆         ⢀⠤⠊                                    │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                            ⠈⢢      ⢀⠔⠁               ▌ TOP MOVERS           │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                              ⠣⡀  ⣀⠔⠁                  · best  ACWI    +0.0% │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ $9,987.10                     ⠱⡠⠊                     · worst BNDW    +0.0% │ WATCHING                        "
" /command …   http://127.0.0.1:8765                                                 ● SSE  ● OWNER  propose·auto  GLASS "
