clients/atlas-tui/tests/snapshots/golden_book__the_book_view_renders_the_ribbon_at_120x36.snap
---
source: tests/golden_book.rs
expression: "book().frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 DESK │PORTFOLIO VALUE       UNREALIZED P&L WINDOW      SHARPE   0.27 GROSS  100.0% │▌ PULSE                          "
" 2 MKTS │$10,000.00            +$0.00         +0.00%      VOL     15.3% NET    100.0% │ desk stress  …                  "
"▌3 BOOK │2 pos · cash $0.00    +0.00% ▲0 ▼0   5 marks     MDD     -2.5% CVAR95  -2.3% │ regime CALM  robust UNCERTAIN   "
" 4 RSCH │─────────────────────────────────────────────────────────────────────────────│ drawdown 0.0%  tier NONE        "
" 5 WORK │                                                                             │ gross 100.0%                    "
" 6 AUDIT│positions blotter — Task 12 · allocation heatmap and equity chart — Task 13  │                                 "
" 7 SETT │                                                                             │▌ BREADTH                        "
"        │                                                                             │ ███████████████████████████████ "
"        │                                                                             │ adv 1 / dec 4                   "
"        │                                                                             │                                 "
"        │                                                                             │▌ MOVERS                         "
"        │                                                                             │ ▲ best  XLF    +1.24%           "
"        │                                                                             │ ▼ worst XLK    -2.08%           "
"        │                                                                             │                                 "
"        │                                                                             │▌ REGIME                         "
"        │                                                                             │ … waiting for the regime panel  "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      STRESS               "
"        │                                                                             │ agreement  ALIGNED              "
"        │                                                                             │ conviction 84.0%                "
"        │                                                                             │ news       alpaca               "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ WATCHING                        "
" /command …                                                                         ● SSE  ● OWNER  propose·auto  GLASS "
