clients/atlas-tui/tests/snapshots/golden_book__the_proposal_card_renders_the_diff_the_verdict_and_the_hash_at_120x36.snap
---
source: tests/golden_book.rs
expression: "proposed().frame(120, 36)"
---
" no market assets in the last snapshot                                                                                  "
" 1 ATLAS│PORTFOLIO VALUE       UNREALIZED P&L WINDOW      SHARPE     -- GROSS      -- │▌ PULSE                          "
" 2 DESK │$1,000,000.00         --             --          VOL        -- NET        -- │ desk stress  …                  "
" 3 MKTS │4 pos · cash --       -- ▲0 ▼0       -- marks    MDD        -- CVAR95     -- │ regime --  robust --            "
"▌4 BOOK │─────────────────────────────────────────────────────────────────────────────│ drawdown --  tier --            "
" 5 RSCH │▌ POSITIONS                                    s sort · [ ] page  « ‹ 1/4 › »│ gross --                        "
" 6 PRED │SYMBOL      QTY    LAST     AVG   WT%▾    MKTVAL       P&L    P&L%    TREND  │                                 "
" 7 WORK │▌SPY         --      --      --  35.0%        --        --      --     ────  │▌ BREADTH                        "
" 8 AUDIT│▌ YOUR CALL                                                         view-only│ --                              "
" 9 SETT │plan b92a58fa5c1 pending · expires 15:42:00                                  │ adv -- / dec --                 "
" 0 VIS  │XLF       -- →  10.0%                                                        │                                 "
"        │ACWI   20.0% →  30.0%                                                        │▌ MOVERS                         "
"        │SPY    35.0% →  25.0%                                                        │ --                              "
"        │QQQ    20.0% →  20.0%                                                        │                                 "
"        │XLK    15.0% →  15.0%                                                        │▌ REGIME                         "
"        │turnover 42.0% · 5 legs                                                      │ … waiting for the regime panel  "
"        │referee PASS · 5a6978 · referee-agent                                        │                                 "
"        │c453496ae7a superseded by b92a58fa                                           │                                 "
"        │view-only — booking needs an armed window                                    │                                 "
"        │─────────────────────────────────────────────────────────────────────────────│                                 "
"        │▌ PLANS                                                             view-only│                                 "
"        │no plan on the ledger — the desk has proposed nothing                        │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │─────────────────────────────────────────────────────────────────────────────│ state      --                   "
"        │▌ EQUITY                       p period  ALL 1Y 3M 1M ▌ HOLDINGS        h P&L│ agreement  --                   "
"        │no equity series in the last snapshot                 SPY      -- ACWI     --│ conviction --                   "
"        │                                                      QQQ      -- XLK      --│ news       --                   "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                      ▌ TOP MOVERS           │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                       --                    │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ WATCHING                        "
" /command …                                                                            ● SSE  ● OWNER  --·manual  GLASS "
